tests/fixtures/invalid/none_floordiv_str.py
# Cannot floor divide None and Str
x: None = None // "hello"
